--- a/src/app/components/student/student.html
+++ b/src/app/components/student/student.html
@@ -25,4 +25,11 @@
 
 <!-- ng model -->
 
-<input type="text" [(ngModel)]="name" placeholder="Enter student name">
+<!-- <input type="text" [(ngModel)]="name" placeholder="Enter student name"> -->
+
+
+{{name}}
+
+{{studentData | json}}
+
+<!-- <input type="button" value="Send Data to Parent" (click)="handleButtonClick()"> -->
