--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,4 @@
+{{parentData | json}}
 <h1>Welcome to angular</h1>
-<app-student></app-student>
+<app-student [student-name]="title" [studentData]="students"
+(studentEvent)="handlerInParent($event)"></app-student>
