reusable component preparation workshop

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,6 @@
 {{parentData | json}}
 <h1>Welcome to angular</h1>
 <app-student [student-name]="title" [studentData]="students"
-(studentEvent)="handlerInParent($event)"></app-student>
+(studentOutput)="handlerInParent($event)"></app-student>
+
+<app-product></app-product>
