Actions in reusable components

--- a/src/app/components/product/product.html
+++ b/src/app/components/product/product.html
@@ -1,4 +1,5 @@
 <app-common-grid 
 [data]="productGridData" 
-[columns]="productGridColums">
+[columns]="productGridColums"
+(actionOutput)="handleAction($event)">
 </app-common-grid>
