--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,8 @@
 {{parentData | json}}
 <h1>Welcome to angular</h1>
-<app-student [student-name]="title" [studentData]="students"
+<app-eventsdemo></app-eventsdemo>
+
+<!-- <app-student [student-name]="title" [studentData]="students"
 (studentOutput)="handlerInParent($event)"></app-student>
 
-<app-product></app-product>
+<app-product></app-product> -->
