--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,7 @@
 {{parentData | json}}
 <h1>Welcome to angular</h1>
-<app-eventsdemo></app-eventsdemo>
+<!-- <app-eventsdemo></app-eventsdemo> -->
 
-<!-- <app-student [student-name]="title" [studentData]="students"
-(studentOutput)="handlerInParent($event)"></app-student>
+<app-student [student-name]="title" [studentData]="students" (studentOutput)="handlerInParent($event)"></app-student>
 
-<app-product></app-product> -->
+<app-product></app-product>
