--- a/src/app/components/student/student.html
+++ b/src/app/components/student/student.html
@@ -1,4 +1,5 @@
-<app-common-grid [data]="studentTableData" 
+<!-- <app-common-grid [data]="studentTableData" 
 [columns]="studentTableColums">
-</app-common-grid>
+</app-common-grid> -->
+<!-- {{count}} -->
 
