--- a/src/app/components/product/product.html
+++ b/src/app/components/product/product.html
@@ -1,14 +1,35 @@
-<app-common-grid 
+<!-- {{totalPrice()}}
+
+<input type="button" (click)="updatePrice()" value="Update"/>
+ -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ <app-common-grid 
 [data]="productGridData" 
 [columns]="productGridColums"
 (actionOutput)="handleAction($event)">
 </app-common-grid>
 
+<!--
 {{firstName}}
 <div [innerHTML]="5 | starrating">
 
 </div>
-<h1> {{ 'Venkat' | wishingpipe | uppercase}}</h1>
+<h1> {{ 'Venkat' | wishingpipe | uppercase}}</h1> -->
 <!-- {{productGridData[0].price | currency:'CAD':'symbol-narrow':'1.0-5'}}
 <br />
 {{date | date:'dd/MM/yyyy HH:mm':'UTC'}}
