Signals (signal, computed, effect)

--- a/src/app/components/product/product.html
+++ b/src/app/components/product/product.html
@@ -1,7 +1,8 @@
-<!-- {{totalPrice()}}
+CurrentVal:{{price}}
 
 <input type="button" (click)="updatePrice()" value="Update"/>
- -->
+<input type="button" (click)="registerEffect()" value="Register effect"/>
+
 
 
 
