--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,6 +2,7 @@
 <h1>Welcome to angular</h1>
 <!-- <app-eventsdemo></app-eventsdemo> -->
 
-<app-student [student-name]="title" [studentData]="students" (studentOutput)="handlerInParent($event)"></app-student>
+<!-- <app-student [student-name]="title" [studentData]="students" (studentOutput)="handlerInParent($event)"></app-student>
 
-<app-product></app-product>
+<app-product></app-product> -->
+<app-observablesdemo></app-observablesdemo>
