--- a/src/app/components/product/product.html
+++ b/src/app/components/product/product.html
@@ -1,23 +1,7 @@
-CurrentVal:{{price}}
+<!-- CurrentVal:{{price}}
 
 <input type="button" (click)="updatePrice()" value="Update"/>
-<input type="button" (click)="registerEffect()" value="Register effect"/>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<input type="button" (click)="registerEffect()" value="Register effect"/> -->
 
  <app-common-grid 
 [data]="productGridData" 
