--- a/src/app/components/product/product.html
+++ b/src/app/components/product/product.html
@@ -8,6 +8,11 @@
 [columns]="productGridColums"
 (actionOutput)="handleAction($event)">
 </app-common-grid>
+<router-outlet></router-outlet>
+<!-- @for (item of productGridData; track $index) {
+    <a [routerLink]="['/products', item.id]">{{item.name}}</a>
+    <br />
+} -->
 
 <!--
 {{firstName}}
