--- a/src/app/components/product/product.html
+++ b/src/app/components/product/product.html
@@ -3,12 +3,17 @@
 <input type="button" (click)="updatePrice()" value="Update"/>
 <input type="button" (click)="registerEffect()" value="Register effect"/> -->
 
- <app-common-grid 
+ <!-- <app-common-grid 
 [data]="productGridData" 
 [columns]="productGridColums"
 (actionOutput)="handleAction($event)">
-</app-common-grid>
-<router-outlet></router-outlet>
+</app-common-grid> -->
+<app-cards
+[data]="productGridData" 
+[columns]="productGridColums"
+(actionOutput)="handleAction($event)"
+></app-cards>
+<!-- <router-outlet></router-outlet> -->
 <!-- @for (item of productGridData; track $index) {
     <a [routerLink]="['/products', item.id]">{{item.name}}</a>
     <br />
