--- a/src/app/components/shared/cards/cards.css
+++ b/src/app/components/shared/cards/cards.css
@@ -3,9 +3,10 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-content: center;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: stretch;
 }
 .card-item{
     margin: 15px;
+    width: 18rem;
 }
