--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,2 +1,56 @@
-<h1>home works!</h1>
-<router-outlet></router-outlet>
+<h1>Welcome to Amazon </h1>
+<!-- Carousel -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+    <!-- Indicators/dots -->
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="5"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="6"></button>
+    </div>
+
+    <!-- The slideshow/carousel -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="/images/banner/Banner1.jpg" alt="Los Angeles" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="/images/banner/Banner2.jpg" alt="Chicago" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="/images/banner/Banner3.jpg" alt="New York" class="d-block w-100">
+        </div>
+        <div class="carousel-item active">
+            <img src="/images/banner/Banner4.jpg" alt="Los Angeles" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="/images/banner/Banner5.jpg" alt="Chicago" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="/images/banner/Banner6.jpg" alt="New York" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="/images/banner/Banner7.jpg" alt="New York" class="d-block w-100">
+        </div>
+    </div>
+
+    <!-- Left and right controls/icons -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </button>
+</div>
+<div>
+    <h1>Best selling products </h1>
+    <app-product></app-product>
+    <h1>New arrivals products </h1>
+    <app-product></app-product>
+    <h1>Featued products </h1>
+    <app-product></app-product>
+</div>
