--- a/src/app/components/product/product.html
+++ b/src/app/components/product/product.html
@@ -2,7 +2,7 @@
 
 <input type="button" (click)="updatePrice()" value="Update"/>
 <input type="button" (click)="registerEffect()" value="Register effect"/> -->
-
+<input type="input" [(ngModel)]="firstName" />
  <!-- <app-common-grid 
 [data]="productGridData" 
 [columns]="productGridColums"
