--- a/src/app/components/notfound/notfound.html
+++ b/src/app/components/notfound/notfound.html
@@ -1,1 +1,10 @@
-<p>notfound works!</p>
+<h1>404 Page Not found</h1>
+<p class="zoom-area"><b></b>error occured or page not found. </p>
+<section class="error-container">
+  <span class="four"><span class="screen-reader-text">4</span></span>
+  <span class="zero"><span class="screen-reader-text">0</span></span>
+  <span class="four"><span class="screen-reader-text">4</span></span>
+</section>
+<div class="link-container">
+  <a routerLink="home" class="more-link">go to home page</a>
+</div>
