--- a/src/app/components/eventsdemo/eventsdemo.html
+++ b/src/app/components/eventsdemo/eventsdemo.html
@@ -1,4 +1,4 @@
-<p>eventsdemo works!</p>
+<!-- <p>eventsdemo works!</p>
 <button [ngClass]="['btn', cssClass]"
 (click)="handleButtonClick()"
 (mouseover)="handleButtonMouseHover()"
@@ -22,4 +22,4 @@
 
 placeholder="Type something and press enter"/>
 
-<h1>{{text}}</h1>
+<h1>{{text}}</h1> -->
