--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -48,9 +48,9 @@
 </div>
 <div>
     <h1>Best selling products </h1>
-    <app-product></app-product>
+    <!-- <app-product></app-product>
     <h1>New arrivals products </h1>
     <app-product></app-product>
     <h1>Featued products </h1>
-    <app-product></app-product>
+    <app-product></app-product> -->
 </div>
