--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,11 +4,12 @@
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="catalog" routerLinkActive="active"
-                    [queryParams]="{id:1, name: 'Dell Laptop'}" fragment="testFragment">Products</a>
+                <a class="nav-link" routerLink="products" routerLinkActive="active">Products</a>
+                <!-- <a class="nav-link" routerLink="catalog" routerLinkActive="active"
+                    [queryParams]="{id:1, name: 'Dell Laptop'}" fragment="testFragment">Products</a> -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="obsdemo" routerLinkActive="active">Categories</a>
+                <a class="nav-link" routerLink="catalog" routerLinkActive="active">Catalog</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="account" routerLinkActive="active">Account</a>
