--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,7 +9,7 @@
                     [queryParams]="{id:1, name: 'Dell Laptop'}" fragment="testFragment">Products</a> -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="catalog" routerLinkActive="active">Catalog</a>
+                <a class="nav-link" routerLink="products/catalog" routerLinkActive="active">Catalog</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="account" routerLinkActive="active">Account</a>
