--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,7 +4,10 @@
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="products" routerLinkActive="active">Products</a>
+                <a class="nav-link" 
+                
+                [routerLink]="[{outlets:{second:'products'}}]"
+                routerLinkActive="active">Products</a>
                 <!-- <a class="nav-link" routerLink="catalog" routerLinkActive="active"
                     [queryParams]="{id:1, name: 'Dell Laptop'}" fragment="testFragment">Products</a> -->
             </li>
@@ -29,4 +32,9 @@
         </ul>
     </div>
 </nav>
+<input type="button" value="Clear Outlet" (click)="clear()">
+<input type="button" value="Load Outlet" (click)="load()">
 <router-outlet></router-outlet>
+<router-outlet name="second"></router-outlet>
+
+<app-lifecycledemo></app-lifecycledemo>
