--- a/src/app/components/lifecycledemo/lifecycledemo.html
+++ b/src/app/components/lifecycledemo/lifecycledemo.html
@@ -1,4 +1,11 @@
 <h1>Parent Component</h1>
-<app-childdemo [product]="product"></app-childdemo>
+<!-- <app-childdemo [product]="product">
+<h1 header>Welcome to content projection</h1>
+<h2>this is main content</h2>
+<app-specifications footer [specifications]="specifications"></app-specifications>
+</app-childdemo> -->
+
+<app-childdemo></app-childdemo>
+
 
 <input type="button" (click)="updateProduct()" value="Update">
