--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Amazon Cart</a>
-
+<!-- [routerLink]="[{outlets:{second:'products'}}]" -->
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" 
                 
-                [routerLink]="[{outlets:{second:'products'}}]"
+                [routerLink]="'products'"
                 routerLinkActive="active">Products</a>
                 <!-- <a class="nav-link" routerLink="catalog" routerLinkActive="active"
                     [queryParams]="{id:1, name: 'Dell Laptop'}" fragment="testFragment">Products</a> -->
