--- a/src/app/components/product/product.html
+++ b/src/app/components/product/product.html
@@ -5,17 +5,17 @@
 <input type="button" (click)="updatePrice()" value="Update"/>
 <input type="button" (click)="registerEffect()" value="Register effect"/> -->
 <!-- <input type="input" [(ngModel)]="firstName" /> -->
- <!-- <app-common-grid 
+ <app-common-grid 
 [data]="productGridData" 
 [columns]="productGridColums"
 (actionOutput)="handleAction($event)">
-</app-common-grid> -->
+</app-common-grid>
 <a [routerLink]="'add'">Add Product</a>
-<app-cards
+<!-- <app-cards
 [data]="productGridData" 
 [columns]="productGridColums"
 (actionOutput)="handleAction($event)"
-></app-cards>
+></app-cards> -->
 <!-- <router-outlet></router-outlet> -->
 <!-- @for (item of productGridData; track $index) {
     <a [routerLink]="['/products', item.id]">{{item.name}}</a>
