--- a/src/app/components/account/signup/signup.html
+++ b/src/app/components/account/signup/signup.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <div class="row">
         <h1>User Signup form</h1>
     </div>
@@ -201,4 +201,224 @@
     </div>
 
 </div>
-{{signupForm.value | json}}
+{{signupForm.value | json}} -->
+
+<div>
+    <div class="row">
+        <h1>User Signup form</h1>
+    </div>
+    <div class="row" style="margin: 40px;">
+        <form #myForm="ngForm" (ngSubmit)="saveUser(myForm)">
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" class="form-control" id="name"
+                     #name="ngModel" [(ngModel)]="templateModel.name" required>
+                     <div>
+                        @if(name.invalid && (name.touched
+                        ||
+                        name.dirty))
+                        {
+                        @if(name.hasError('required'))
+                        {
+                        <span style="color:red">Name Required</span>
+                        }
+                        }
+                    </div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="name">Age</label>
+                    <input type="text" name="age" class="form-control" id="age" #age="ngModel" [(ngModel)]="templateModel.age">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="name">Gender</label>
+                    <input type="radio" value="male" name="gender" #gender="ngModel" [(ngModel)]="templateModel.gender"> Male
+                    <input type="radio" value="female" name="gender" #gender="ngModel" [(ngModel)]="templateModel.gender"> Female
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="name">Country</label>
+                    <select name="country" #country="ngModel" [(ngModel)]="templateModel.country">
+                        <option value="1">India</option>
+                        <option value="2">USA</option>
+                        <option value="3">Australia</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="email">Email</label>
+                    <input type="text" class="form-control" id="email" name="email">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="username">Username</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="username" name="username">
+                    </div>
+                    <!-- <div>
+                        @if(signupForm.controls.username.invalid && (signupForm.controls.username.touched
+                        ||
+                        signupForm.controls.username.dirty))
+                        {
+                        @if(signupForm.controls.username.hasError('required'))
+                        {
+                        <span style="color:red">Username Required</span>
+                        }
+                        @if(signupForm.controls.username.hasError('usernamecheck'))
+                        {
+                        <span style="color:red">Username already exist</span>
+                        }
+                        }
+                    </div> -->
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="password">Password</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="password" name="password">
+                    </div>
+                    <!-- <div>
+                        @if(signupForm.controls.password.invalid && (signupForm.controls.password.touched ||
+                        signupForm.controls.password.dirty))
+                        {
+                        @if(signupForm.controls.password.hasError('required'))
+                        {
+                        <span style="color:red">Password Required</span>
+                        }
+                        @if(signupForm.controls.password.hasError('minlength'))
+                        {
+                        <span style="color:red">Password should be at least 6 characters long</span>
+                        }
+                        <br />
+                        @if(signupForm.controls.password.hasError('passwordpolicy'))
+                        {
+                        <span style="color:red">Password should match the policy</span>
+                        }
+                        }
+                    </div> -->
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="confirmPassword">Confirm password</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="confirmPassword" name="confirmPassword">
+                    </div>
+                    <!-- <div>
+                        @if(signupForm.controls.confirmPassword.invalid && (signupForm.controls.confirmPassword.touched
+                        ||
+                        signupForm.controls.confirmPassword.dirty))
+                        {
+                        @if(signupForm.controls.confirmPassword.hasError('required'))
+                        {
+                        <span style="color:red">Password Required</span>
+                        }
+                        @if(signupForm.controls.confirmPassword.hasError('passwordpolicy'))
+                        {
+                        <span style="color:red">Password should match the policy</span>
+                        }
+                        <br />
+                        @if(signupForm.controls.password.hasError('minlength'))
+                        {
+                        <span style="color:red">Password should be at least 6 characters long</span>
+                        }
+                        <br />
+                        @if(signupForm.hasError('passwordmatch'))
+                        {
+                        <span style="color:red">Confirm password should match the password</span>
+                        }
+                        }
+                    </div> -->
+                </div>
+            </div>
+            <form >
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                        <label for="address">Address</label>
+                        <div class="input-group">
+                            <textarea name="address" class="form-control" id="address"></textarea>
+                        </div>
+                        <!-- <div>
+                            @if(signupForm.controls.address.controls.address.invalid &&
+                            (signupForm.controls.address.controls.address.touched
+                            ||
+                            signupForm.controls.address.controls.address.dirty))
+                            {
+                            @if(signupForm.controls.address.controls.address.hasError('required'))
+                            {
+                            <span style="color:red">Address Required</span>
+                            }
+                            }
+                        </div> -->
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                        <label for="city">City</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="city" name="city">
+                        </div>
+                        <!-- <div>
+                            @if(signupForm.controls.address.controls.city.invalid &&
+                            (signupForm.controls.address.controls.city.touched
+                            ||
+                            signupForm.controls.address.controls.city.dirty))
+                            {
+                            @if(signupForm.controls.address.controls.city.hasError('required'))
+                            {
+                            <span style="color:red">City Required</span>
+                            }
+                            }
+                        </div> -->
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                        <label for="pincode">PIN Code</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="pincode" name="pincode">
+                        </div>
+                        <!-- <div>
+                            @if(signupForm.controls.address.controls.pincode.invalid &&
+                            (signupForm.controls.address.controls.pincode.touched
+                            ||
+                            signupForm.controls.address.controls.pincode.dirty))
+                            {
+                            @if(signupForm.controls.address.controls.pincode.hasError('required'))
+                            {
+                            <span style="color:red">pincode Required</span>
+                            }
+                            }
+                        </div> -->
+                    </div>
+                </div>
+            </form>
+            <div class="form-group">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck"
+                        name="acceptTerms">
+                    <label class="form-check-label" for="invalidCheck">
+                        Agree to terms and conditions
+                    </label>
+                    <div class="invalid-feedback">
+                        You must agree before submitting.
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-primary" type="submit">Submit form</button>
+            <button class="btn btn-warning" type="reset">Reset form</button>
+            <button class="btn btn-info" type="button" (click)="setDefaultValues(myForm)">Set Default Values</button>
+            <button class="btn btn-info" type="button" (click)="updateValues({})">Update Values</button>
+        </form>
+    </div>
+
+</div>
+{{myForm.value | json}}
